--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "author": "eddcp",
   "license": "ISC",
   "dependencies": {
-    "fastify": "^4.26.1"
+    "dotenv": "^16.4.4",
+    "fastify": "^4.26.1",
+    "pg": "^8.11.3"
   }
 }
